--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "favicons": "^7.2.0",
     "gh-pages": "^6.3.0"
   },
   "scripts": {
@@ -35,7 +36,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "gen:favicon": "node scripts/generate-favicon.js"
   },
   "eslintConfig": {
     "extends": [
