--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "lucide-react": "^0.552.0",
     "postcss": "^8.4.31",
     "react": "^19.2.0",
